--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
     <string name="app_name">TrainingApp</string>
     <string name="home_button">Home Button</string>
+    <string name="selected_home_button">Selected Home Button</string>
     <string name="my_training">My trainings</string>
+    <string name="selected_my_training">Selected My trainings</string>
 
     <string name="my_training_title">Trainings</string>
     <!--
