--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
 
     <string name="my_training_title">Trainings</string>
 
+    <string name="add_to_star">Star training</string>
     <!--
     Description Exercises
     -->
